# fastapi-ddd-boilerplate

./: .gitignore  LICENSE  README.md  pyproject.toml
fast_ddd/: main.py
fast_ddd/adapters/: sql_storage.py
fast_ddd/domain/: value.py
fast_ddd/domain/repositories/: storage.py
fast_ddd/interfaces/rest/dto/: request.py  response.py
fast_ddd/interfaces/rest/routers/: items.py
fast_ddd/services/items/: items_manager.py
